objects/Solution_Design__c.object
<CustomObject>
    <description>Link from Opportunity to Solution Design data</description>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deal_Jacket_List__c</fullName>
        <formula>hyperlink( &quot;http://&quot; &amp; $Setup.CustomSettings__c.SAWebServer__c &amp; &quot;/&quot; &amp; &quot;OnlineDJ/ODJ_DealJacketList.aspx?SID=&quot; &amp; SDI__c &amp; &quot;&amp;SAP=1&quot;,&quot;Deal Jacket List&quot;, &quot;_blank&quot;)</formula>
        <label>Deal Jacket List</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E_Mailed_to_BDC__c</fullName>
        <label>E-Mailed to BDC</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>E_Mailed_to_PSE__c</fullName>
        <label>E-Mailed to PSE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Updated__c</fullName>
        <label>Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>R00N40000001lfq2EAA</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SDI__c</fullName>
        <externalId>true</externalId>
        <label>SDI #</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SLX_NNARec_CreateDate__c</fullName>
        <label>SLX NNARec CreateDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SLX_NNARec_ID__c</fullName>
        <label>SLX NNARec ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Design_Copy__c</fullName>
        <formula>hyperlink(&quot;http://&quot; &amp; $Setup.CustomSettings__c.SAWebServer__c  &amp; &quot;/&quot; &amp;  $Setup.CustomSettings__c.SAPortal__c  &amp; &quot;/&quot; &amp; &quot;SLX_NNA_SitePlanCopy.asp?OID=&quot; &amp; Opportunity__r.Id &amp; &quot;&amp;UID=&quot; &amp; $User.Id &amp; &quot;&amp;SID=&quot; &amp; SDI__c ,&quot;Copy&quot;, &quot;_blank&quot;)</formula>
        <label>Copy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Design_Delete__c</fullName>
        <formula>hyperlink(&quot;http://&quot; &amp; $Setup.CustomSettings__c.SAWebServer__c &amp; &quot;/&quot; &amp; $Setup.CustomSettings__c.SAPortal__c &amp; &quot;/&quot; &amp; &quot;SLX_NNA_SitePlanDelete.asp?OID=&quot; &amp;  Opportunity__r.Id  &amp; &quot;&amp;UID=&quot; &amp;  $User.Id  &amp; &quot;&amp;SID=&quot; &amp; SDI__c  ,&quot;Delete&quot;, &quot;_blank&quot;)</formula>
        <label>Delete</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Design_Name__c</fullName>
        <label>Solution Design Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Design_Open_Link__c</fullName>
        <formula>hyperlink(&quot;http://&quot; &amp; $Setup.CustomSettings__c.SAWebServer__c &amp; &quot;/&quot; &amp; $Setup.CustomSettings__c.SAPortal__c &amp; &quot;/&quot; &amp; &quot;SLX_NNA_Main.asp?OID=&quot; &amp;  Opportunity__r.Id &amp; &quot;&amp;UID=&quot; &amp;  $User.Id  &amp; &quot;&amp;SID=&quot; &amp; SDI__c &amp; &quot;&amp;ScrID=4&quot;,  Solution_Design_Name__c, &quot;_blank&quot; )</formula>
        <label>Solution Design Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Design_URL__c</fullName>
        <label>Solution Design URL</label>
        <type>Url</type>
    </fields>
    <label>Solution Designs</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Completed__c</columns>
        <columns>E_Mailed_to_BDC__c</columns>
        <columns>E_Mailed_to_PSE__c</columns>
        <columns>Last_Updated__c</columns>
        <columns>Opportunity__c</columns>
        <columns>SDI__c</columns>
        <columns>Solution_Design_Name__c</columns>
        <columns>Solution_Design_Open_Link__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>SDI #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Solution Designs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>